# csci222project

./: .gitignore  README.md
backend/: .gitignore  CMakeLists.txt
backend/.ngrest/: packages~
backend/backend/: CMakeLists.txt
backend/backend/src/: attachment_controller.h  backend.cpp  backend.h  bug_controller.h  comment_controller.h  const.h  controller.h  database_connection.h  driver.cpp  entities.cpp  entities.h  parser.h  project_controller.h  return_types.h  search_controller.h  src.cpp  src.h  time_utility.h  transactions.cpp  transactions.h  user_controller.h  utilitycontrollers.h
frontend/: .gitignore  README.md  index.html  package.json
frontend/src/: index.js
frontend/src/actions/: genericApiRequest.js  index.js
frontend/src/components/: AUIDropdown.js  App.js  BugPage.js  BugRow.js  BugTable.js  CreateAccount.js  DropdownIndividual.js  DropdownSelector.js  InputField.js  Login.js  LoginForm.js  LoginPage.js  Menubar.js  ProfilePage.js  RadioField.js  RegisterForm.js  ReportPage.js  ReportWriter.js  Search.js  SearchPage.js  SidebarAnalysis.js  SidebarAssign.js  SidebarSearch.js
frontend/src/const/: index.js
frontend/src/containers/: BugPageContainer.js  BugTableContainer.js  LoginContainer.js  LoginFormContainer.js  LoginPageContainer.js  ProfilePageContainer.js  RegisterFormContainer.js  ReportPageContainer.js
frontend/src/css/: .gitignore  (+1 more)
testing/: attachment_test.cpp  attachment_test.h  bug_test.cpp  bug_test.h  comment_test.cpp  comment_test.h  compile_tests.sh  main.cpp  project_test.cpp  project_test.h  user_test.cpp  user_test.h
(+9 files in other folders)
